Change my name's font to Stars & Love. Add information about coaching to Coaching page. Fix CSS formatting overall, defining headers correctly and improving spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -42,13 +42,6 @@
 }
 
 @font-face {
-  font-family: "Sawarabi Mincho";
-  src: url("fonts/SawarabiMincho-Regular.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
   font-family: "Red Hat Display";
   src: url("fonts/RedHatDisplay-VariableFont_wght.ttf") format("truetype");
   font-style: normal;
@@ -59,6 +52,20 @@
   src: url("fonts/RedHatDisplay-Italic-VariableFont_wght.ttf")
     format("truetype");
   font-style: italic;
+}
+
+@font-face {
+  font-family: "Sawarabi Mincho";
+  src: url("fonts/SawarabiMincho-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Stars & Love";
+  src: url("fonts/Stars&Love-BottomHeavy.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 a {
@@ -73,7 +80,7 @@ html {
 }
 
 * {
-  /* font-family: "Amsterdam One", sans-serif; */
+  /* font-family: "Stars & Love", sans-serif; */
   font-family: "Red Hat Display", sans-serif;
 }
 
@@ -109,9 +116,17 @@ button {
 
 .Subtitle {
   width: fit-content;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   line-height: 40px;
   font-size: 30px;
+  font-family: "Sawarabi Mincho";
+}
+
+.Subsubtitle {
+  width: fit-content;
+  margin-bottom: 20px;
+  line-height: 30px;
+  font-size: 22px;
   font-family: "Sawarabi Mincho";
 }
 
