--- a/src/pages/Coaching/Coaching.css
+++ b/src/pages/Coaching/Coaching.css
@@ -1,10 +1,10 @@
 .TextContent {
   text-align: left;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .Interactive {
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .ValueName {
